# ai_recon

./: .gitignore  LICENSE  README.md  ToDoGUI.md  docker-compose.yml  pyproject.toml
ai_recon/: __init__.py  cli.py
ai_recon/adapters/llm_protocol/: __init__.py  anthropic_msg.py  azure_openai.py  base.py  bedrock.py  gemini.py  ollama.py  openai_compat.py  tgi.py  vllm_native.py
ai_recon/adapters/repo/: base.py  bitbucket.py  github.py  gitlab.py  local.py
ai_recon/adapters/secrets/: base.py  env.py  keyring_adapter.py  vault.py
ai_recon/adapters/siem/: base.py  datadog.py  elastic.py  kibana.py  noop.py  sentinel.py  splunk.py
ai_recon/adapters/transport/: base.py  http.py  mcp_jsonrpc.py  websocket.py
ai_recon/catalogs/: ai_headers.yaml  frameworks.yaml  health_endpoints.yaml  honeypot_signals.yaml  inference_servers.yaml  pii_patterns.yaml  prompt_templates.yaml  rephrase_intents.yaml  severity.yaml  vector_dbs.yaml  vendors.yaml
ai_recon/catalogs/jailbreak_corpus/: dan.yaml  many_shot.yaml
ai_recon/core/: auth.py  cache.py  errors.py  events.py  http.py  models.py  ratelimit.py  registry.py  report.py  runner.py  scope.py  tokens.py
ai_recon/profiles/: agent_audit.yaml  blackbox_saas.yaml  ctf_lab.yaml  full_recon.yaml  internal_enterprise.yaml  rag_audit.yaml  single_endpoint.yaml
ai_recon/schemas/: profile.schema.json  report.schema.json  scope.schema.json
ai_recon/techniques/: adapters_siem_query.py  base.py
ai_recon/techniques/active/: a2a_enum.py  client_js_endpoint_probe.py  context_window.py  data_exfiltration_test.py  gateway_detect.py  guardrail_probe.py  indirect_injection.py  jailbreak_suite.py  mcp_enum.py  model_behavior.py  model_contradiction.py  model_cutoff.py  model_fingerprint_summary.py  model_identity.py  prompt_injection.py  quick_port_api_sweep.py  rag_boundary.py  rag_inversion.py  rag_mapping.py  rag_metadata_leak.py  rag_pipeline_summary.py  rag_probe.py  rag_threshold.py  service_discovery.py  status_triage.py  system_prompt_probe.py  tokenizer_probe.py  tool_enum.py
ai_recon/techniques/evasion/: honeypot_detect.py  kql_to_regex.py  pre_flight.py  rag_stealth_probe.py  rephrase_evasion.py  rephraser.py  rule_loader.py  siem_evasion_test.py  traffic_shaper.py
ai_recon/techniques/infra/: cost_oracle.py  inference_server_probe.py  side_channel_timing.py  streaming_leak.py  vector_db_probe.py
ai_recon/techniques/passive/: ci_config_scan.py  dependency_audit.py  dns_recon.py  docker_label_inspect.py  env_file_scan.py  header_fingerprint.py  health_probe.py  js_config_extract.py  js_secrets_extract.py  k8s_manifest_scan.py  openai_compat_probe.py  osint_model_card.py  repo_mining.py  tls_metadata.py
ai_recon/techniques/safety/: bias_probe.py  pii_leakage.py  toxicity_probe.py  training_data_extract.py
apps/api/: Dockerfile  ai_recon_api.db  pyproject.toml
apps/api/ai_recon_api/: __init__.py  bootstrap.py  deps.py  logging.py  main.py  settings.py
apps/api/ai_recon_api/auth/: security.py
apps/api/ai_recon_api/db/: init.py  models.py  session.py
apps/api/ai_recon_api/routers/: adapters.py  auth.py  catalogs.py  profiles.py  reports.py  runs.py  scopes.py  system.py  techniques.py
apps/api/ai_recon_api/schemas/: auth.py  common.py
apps/api/ai_recon_api/services/: catalog.py  eventbus.py  runner.py
apps/api/ai_recon_api/ws/: runs.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/(authed)/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/layout/: command-menu.tsx  page-header.tsx  sidebar.tsx  topbar.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  input.tsx  (+1 more)
apps/web/src/lib/: api.ts  providers.tsx  ws.ts
apps/web/src/styles/: globals.css
deploy/: nginx.conf
scripts/: dev.sh
tests/unit/: test_kql_to_regex.py  test_passive_catalogs.py  test_planner.py  test_rephraser.py  test_scope_guard.py
wordlists/: api_paths.txt
(+13 files in other folders)
