[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-recon"
version = "0.1.0"
description = "Universal AI Reconnaissance & Red-Teaming Framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ai-recon contributors" }]
keywords = ["ai", "security", "red-team", "llm", "reconnaissance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = [
  "httpx[http2]>=0.27",
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "json5>=0.9",
  "tenacity>=8.3",
  "rich>=13.7",
  "tiktoken>=0.7",
  "tokenizers>=0.19",
  "beautifulsoup4>=4.12",
  "GitPython>=3.1",
  "dnspython>=2.6",
  "websockets>=12.0",
  "python-ulid>=2.2",
  "structlog>=24.1",
  "platformdirs>=4.2",
  "aiofiles>=23.2",
  "anyio>=4.3",
]

[project.optional-dependencies]
grpc    = ["grpcio>=1.62", "grpcio-tools>=1.62"]
vault   = ["hvac>=2.1"]
splunk  = ["splunk-sdk>=2.0"]
azure   = ["azure-identity>=1.16"]
gcp     = ["google-cloud-secret-manager>=2.20"]
aws     = ["boto3>=1.34"]
secrets = ["trufflehog3>=3.0", "detect-secrets>=1.5"]
test    = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "hypothesis>=6.100",
  "pytest-cov>=5",
]

[project.scripts]
ai-recon = "ai_recon.cli:app"

[project.entry-points."ai_recon.adapters.siem"]
kibana   = "ai_recon.adapters.siem.kibana:KibanaAdapter"
splunk   = "ai_recon.adapters.siem.splunk:SplunkAdapter"
sentinel = "ai_recon.adapters.siem.sentinel:SentinelAdapter"
elastic  = "ai_recon.adapters.siem.elastic:ElasticAdapter"
datadog  = "ai_recon.adapters.siem.datadog:DatadogAdapter"
noop     = "ai_recon.adapters.siem.noop:NoopAdapter"

[project.entry-points."ai_recon.adapters.repo"]
gitlab      = "ai_recon.adapters.repo.gitlab:GitLabAdapter"
github      = "ai_recon.adapters.repo.github:GitHubAdapter"
bitbucket   = "ai_recon.adapters.repo.bitbucket:BitbucketAdapter"
local       = "ai_recon.adapters.repo.local:LocalAdapter"

[project.entry-points."ai_recon.adapters.secrets"]
env     = "ai_recon.adapters.secrets.env:EnvAdapter"
vault   = "ai_recon.adapters.secrets.vault:VaultAdapter"
keyring = "ai_recon.adapters.secrets.keyring_adapter:KeyringAdapter"

[project.entry-points."ai_recon.techniques"]
# Auto-discovered via techniques package

[tool.hatch.build]
include = [
  "ai_recon/**/*.py",
  "ai_recon/wordlists/**/*.txt",
  "ai_recon/catalogs/**/*.yaml",
  "ai_recon/profiles/**/*.yaml",
  "ai_recon/schemas/**/*.json",
  "README.md",
]

[tool.hatch.version]
path = "ai_recon/__init__.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=ai_recon --cov-report=term-missing -q"

[tool.ruff]
target-version = "py311"
line-length = 100
